chore: enable write modes

--- a/fixtures/test.html
+++ b/fixtures/test.html
@@ -305,6 +305,9 @@
 			margin-top: 50px;
 			backdrop-filter: blur(10px);
 		}
+		.footer:hover {
+			background: red;
+		}
 	</style>
 </head>
 <body>
